# backend-pool-nhl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yaml  release.yaml
config/: debug.json  default.json  release.json
crates/poolnhl_app/: Cargo.toml
crates/poolnhl_app/src/: main.rs
crates/poolnhl_infrastructure/: Cargo.toml
crates/poolnhl_infrastructure/src/: database_connection.rs  jwt.rs  lib.rs  redis_connection.rs  services.rs  settings.rs
crates/poolnhl_infrastructure/src/services/: daily_leaders_service.rs  draft_service.rs  draft_state.rs  nhl_service.rs  players_service.rs  pool_service.rs  users_service.rs
crates/poolnhl_infrastructure/tests/: draft_state_redis.rs  pool_service_mongo.rs
crates/poolnhl_interface/: Cargo.toml
crates/poolnhl_interface/src/: errors.rs  lib.rs
crates/poolnhl_interface/src/daily_leaders/: model.rs  service.rs
crates/poolnhl_interface/src/draft/: model.rs  service.rs
crates/poolnhl_interface/src/nhl/: model.rs  service.rs
crates/poolnhl_interface/src/players/: model.rs  service.rs
crates/poolnhl_interface/src/pool/: model.rs  service.rs
crates/poolnhl_interface/src/users/: model.rs  service.rs
crates/poolnhl_old/: Cargo.toml
crates/poolnhl_old/src/: lib.rs  logger.rs  settings.rs
crates/poolnhl_old/src/db/: mod.rs  user.rs
crates/poolnhl_old/src/models/: user.rs
crates/poolnhl_old/src/routes/: daily_leaders.rs  jwt.rs  mod.rs  user.rs
crates/poolnhl_routing/: Cargo.toml
crates/poolnhl_routing/src/: endpoints.rs  lib.rs  logger.rs  router.rs
crates/poolnhl_routing/src/endpoints/: daily_leaders_endpoints.rs  draft_endpoints.rs  nhl_endpoints.rs  players_endpoints.rs  pool_endpoints.rs  users_endpoints.rs
mongo-init/: restore.sh
src/: Rocket.toml  database.rs  main.rs
src/db/: daily_leaders.rs  dayly_leaders.rs  mod.rs  pool.rs  user.rs
src/errors/: response.rs
src/models/: daily_leaders.rs  dayly_leaders.rs  mod.rs  pool.rs  response.rs  user.rs
src/routes/: auth.rs  daily_leaders.rs  dayly_leaders.rs  jwt.rs  mod.rs  pool.rs  user.rs
