[package]
name = "server"
version = "0.0.0"
edition = "2023"
publish = false

[dependencies] 
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
mongodb = "2.5.0"
serde = "1.0.164"
serde_json = "1.0.97"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
bcrypt = "0.14.0"
web3 = "0.18.0"
rand = "0.8.5"
hex = "0.4.3"