[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
config = "0.13.3"
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
mongodb = "2.5.0"
serde = "1.0.164"
serde_json = "1.0.97"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
chrono = "0.4.26"
bcrypt = "0.14.0"
web3 = "0.18.0"
rand = "0.8.5"
hex = "0.4.3"
lazy_static = "1.4.0"
async_once = "0.2.6"