[package]
name = "poolnhl_infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
poolnhl_interface = { path = "../poolnhl_interface" }
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
config = "0.13.3"
futures = "0.3.30"
mongodb = "2.8.2"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
reqwest = { version = "0.12.4", features = ["json"]}