[package]
name = "poolnhl_infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
poolnhl_interface = { path = "../poolnhl_interface" }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
config = "0.13"
futures = "0.3"
mongodb = "2.8"
chrono = "0.4"
jsonwebtoken = "9.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.38"
reqwest = { version = "0.12", features = ["json"]}