[package]
name = "poolnhl_routing"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws", "tokio", "http1"] }
poolnhl_interface = { path = "../poolnhl_interface" }
poolnhl_infrastructure = { path = "../poolnhl_infrastructure" }
tokio = "1.38.0"
tower-http = {version="0.5.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.97"