[package]
name = "poolnhl_routing"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
poolnhl_interface = { path = "../poolnhl_interface" }
poolnhl_infrastructure = { path = "../poolnhl_infrastructure" }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tokio = "1.38"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = "0.3"
futures = "0.3"
serde_json = "1.0"